[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "physense-api"
version = "0.1.0"
description = "FastAPI backend for the Physense simulation platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "websockets>=13.0",
    "pyyaml>=6.0",
    "physense-utils @ git+https://github.com/Tampipo/physense-utils",
    "physense-qm @ git+https://github.com/Tampipo/physense-qm",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/physense_api"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=physense_api --cov-report=term-missing"

[tool.coverage.run]
source = ["src/physense_api"]
